--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "chenpeng <290591923@qq.com>",
   "license": "ISC",
   "bin": {
-    "ckf-esbuild": "index.js"
+    "ckf-esbuild": "./dist/index.js"
   },
+  "type": "module",
   "files": [
     "index.js"
   ],
@@ -17,20 +18,34 @@
   },
   "scripts": {
     "test": "echo 0",
-    "dev": "echo 0",
-    "build": "echo 0"
+    "dev": "rollup -c -w",
+    "build": "rollup -c "
   },
   "dependencies": {
-    "glob": "^7.2.0",
-    "path": "^0.12.7",
     "cac": "6.7.3",
+    "chalk": "^5.0.1",
     "esbuild": "0.12.26",
     "esbuild-plugin-d.ts": "1.0.6",
     "fs-extra": "10.0.0",
-    "typescript": "4.3.5"
+    "glob": "^7.2.0",
+    "ora": "^6.1.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/fs-extra": "9.0.11"
+    "@babel/core": "^7.18.0",
+    "@babel/node": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.18.0",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/runtime": "^7.18.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@types/fs-extra": "9.0.11",
+    "rollup": "^2.74.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4"
   },
   "optionalDependencies": {
     "fsevents": "~2.3.2"
